Update: Enhanced 3D laser and explosion animations with configurable effects
- Add animated laser beam drawing effect with progressive path visualization
- Implement 3D explosion effects with sprite and particle dome patterns
- Add showParticles and trueReflections props to Board3D for performance control
- Improve animation sequencing: laser fires → explosion triggers → winner displays
- Add settings UI in Header for particle effects and reflection quality toggles
- Update explosion effect utilities with enhanced particle calculations
- Fix animation timing and state synchronization issues
- Add database method for retrieving user by Discord ID
- Translations updated

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -98,5 +98,7 @@
   "game_id": "Game ID",
   "your_move": "your move",
   "no_replays_message": "No replays found. Finished games will appear here for you to watch.",
-  "no_replays": "No replays found."
+  "no_replays": "No replays found.",
+  "show_particles": "Show 3D Particle effects" ,
+  "true_reflections": "Active Reflections (High GPU demand)"
 }
