--- a/client/src/locales/es.json
+++ b/client/src/locales/es.json
@@ -100,5 +100,6 @@
   "no_replays_message": "No se encontraron repeticiones. Los juegos terminados aparecerán aquí para que los veas.",
   "no_replays": "No se encontraron repeticiones.",
   "show_particles": "Mostrar efectos de partículas 3D" ,
-  "true_reflections": "Reflejos activos (alta demanda de GPU)"
+  "true_reflections": "Reflejos activos (alta demanda de GPU)",
+  "renderer": "renderizador"
 }
