--- a/client/src/locales/jp.json
+++ b/client/src/locales/jp.json
@@ -100,5 +100,6 @@
   "no_replays_message": "リプレイは見つかりませんでした。完成したゲームはここに表示され、見ることができます。",
   "no_replays": "リプレイは見つかりませんでした。",
   "show_particles": "3D パーティクル効果を表示" ,
-  "true_reflections": "アクティブ リフレクション (高い GPU 需要)"
+  "true_reflections": "アクティブ リフレクション (高い GPU 需要)",
+  "renderer": "レンダラー"
 }
